# warpdrive

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  TEST-COVERAGE.md  Technical-Architecture.md
demo/slatedb/: Cargo.toml
demo/slatedb/src/: main.rs  sanity.rs
server/: .env.example  Cargo.toml  METADATA_ABSTRACTION.md  TESTING.md  config.yaml  e2e_user_LocalXFS.json  run_tests.sh  server_log.yaml  test_user_local.json  test_user_trait.json  testuser1.json
server/metadata/: metadata.sqlite
server/src/: api.rs  app_state.rs  config.rs  database.rs  integration_tests.rs  lib.rs  main.rs  metadata.rs  metadata_service.rs  mock_store.rs  service.rs  sqlite_store.rs  storage.rs  storage_legacy.rs
server/src/binary/: README.md  comprehensive_test.rs  config.rs  local_xfs_store.rs  mock_store.rs  mod.rs
server/src/metadata/: README.md  comprehensive_test.rs  config.rs  mock_store.rs  mod.rs  sqlite_store.rs
server/src/s3/: README.md  auth.rs  handlers.rs  middleware.rs  mod.rs
server/src/s3/handlers/: acl.rs  bucket.rs  checksum.rs  common.rs  copy.rs  cors.rs  listing.rs  mod.rs  multipart.rs  object.rs  object_lock.rs  (+2 more)
server/src/service/: deletion_worker.rs  metadata_service.rs  mod.rs  storage_service.rs  user_context.rs
server/src/storage/: README.md  comprehensive_test.rs  config.rs  deletion_worker.rs  local_store.rs  mock_store.rs  mod.rs
server/src/util/: flatbuffer_store_generated.rs  mod.rs
server/tests/: integration.rs  s3_integration.rs
server/tests/python/: README.md  requirements.txt  s3_boto_test.py  s3_test_client.py
(+69 files in other folders)
