[package]
name = "warp_drive"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
bincode = "1.3.3"
bytes = "1.7.2"
env_logger = "0.11.5"
flatbuffers = "24.3.25"
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.22"
rusqlite = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9"
log4rs = "1.3.0"
log-mdc = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
md5 = "0.7.0"
hex = "0.4.3"


[dev-dependencies]
actix-web = "4.11.0"
tempfile = "3.8"
serial_test = "3.0"
